<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addressEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

    <Button
        android:id="@+id/getButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:onClick="buttonAction"
        android:text="@string/get"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEdit" />

    <Button
        android:id="@+id/showThisButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:onClick="buttonAction"
        android:text="@string/show_this"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:onClick="buttonAction"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showThisButton"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/addFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="10dp"
        android:visibility="gone">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
